Version 0.1.0:
	-reorganized file structure to better reflect engine component design. Critical engine components now have their own subdirectories of Engine/src, for instance, move, board, and data-structures all live in their own directories now
	-every .c file now has a corresponding .h, doing away with the old hack "protos.h". I regret that it lasted this long. Include best practices now put angle bracket includes before double quote includes, and the two are separated by a blank line
	-function comments now all proceed the prototype in the appropriate header
	-added linked list data type
	
Version 0.1.1:
	-added random number facilities for random integers in a random and a random float function
	-new command "random-move" generates all possible moves and selects one randomly to apply to the board, it prints all possible moves at a position, as well as the new board state
	
Version 0.1.2:
	-added a performance test module for finding bugs in the move generator and benchmarking its speed
	-now with more parentheses...