@@ -41,7 +41,7 @@ void makeMove(Board *pBoard, Move m) {
 		}
 		removeMaterial(pBoard, capturedPiece(m));
 	}
-	pBoard->info.nextMove = (pBoard->info.nextMove + 1)%2;
+	pBoard->info.nextMove ^= 1; // toggle the person to play
 	return;
 }
 
