@@ -11,3 +11,4 @@ Version 0.1.1:
 Version 0.1.2:
 	-added a performance test module for finding bugs in the move generator and benchmarking its speed
 	-now with more parentheses...
+	-added a debugBoard and consistentBoard method for checking board consistency
